hard-gists/4156421/run.log
=== Docker Run Log for 4156421 ===
Started at: Mi 29. Okt 14:23:22 CET 2025

[2025-10-29 14:23:22] START: Running container for 4156421
[2025-10-29 14:23:23] SUCCESS: Container 1827b629fa3d87892cf692e1a09a8b0a7a193a46843e3d2dd6f8af3697558e3e started for 4156421
=== Container logs for 4156421 ===
  File "/snippet.py", line 54
    print touch.location
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4156421 ===
[2025-10-29 14:23:25] INFO: Container 1827b629fa3d87892cf692e1a09a8b0a7a193a46843e3d2dd6f8af3697558e3e has stopped
